Fim correções turma C. Início computação notas

--- a/Materias/2S2020/PED_CE342/Turma_A/222315.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/222315.org
@@ -38,15 +38,15 @@ Sua contextualização da escola monetarista esta bem colocada. No entanto, pode
 * Resenha 2: Novos Clássicos                                        :private:
   :PROPERTIES:
   :TAREFA:   Resenha 2
-  :OBJETIVO:
-  :ARGUMENTO:
-  :CONCEITOS:
-  :DESENVOLVIMENTO:
-  :CONCLUSAO:
-  :CLAREZA:
-  :NOTA:
+  :OBJETIVO: Atingido totalmente
+  :ARGUMENTO: Atingido totalmente
+  :CONCEITOS: Atingido parcialmente
+  :DESENVOLVIMENTO: Atingido totalmente
+  :CONCLUSAO: Atingido totalmente
+  :CLAREZA:  Atingido totalmente
+  :NOTA:     Atingido totalmente
   :END:
-
+  
 ** Comentários individuais
 
    Foram includos no documento enviado. Vale destacar que a atividade foi entregue em pdf, não seguindo, portanto, as instruções.
