--- a/Materias/2S2020/PED_CE342/Turma_C/177964.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/177964.org
@@ -35,3 +35,19 @@
 ** Comentários individuais 
 
 Elenca corretamente os principais elementos da escola monetarista e o faz retomando tanto a curva de Phillips quanto a TQM. A seguir, descreve corretamente as implicações da ilusão monetária, mas não a define. Adiante, corretamente pontua que o trade-off entre inflação e desemprego não é verificado no longo prazo. Em seguida, pontua a neutralidade da moeda enquanto pressuposto da TQM sendo que é uma implicação das as hipóteses a ela associadas (demanda por moeda é estável). Logo depois pontua outros pontos contra a discricionariedade de política monetária. No entanto, não é mencionado que tal ativismo monetário implica inflação apenas e nem qual a origem da inflação (apenas é dito que é um fenômeno monetário). Conclui corretamente a respeito das regras monetárias mas pouco avança em sua explicitação (estoque de moeda deve crescer a mesma taxa que o PIB).
+
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:   Resenha 2
+  :OBJETIVO: Atingido parcialmente
+  :ARGUMENTO: Atingido satisfatoriamente
+  :CONCEITOS: Atingido parcialmente
+  :DESENVOLVIMENTO: Atingido parcialmente
+  :CONCLUSAO: Atingido parcialmente
+  :CLAREZA:  Atingido satisfatoriamente
+  :NOTA:     Atingido parcialmente
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
