--- a/Materias/2S2020/PED_CE342/Turma_C/216397.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/216397.org
@@ -45,7 +45,7 @@ Foi pontuada a importância da retomada da TQM para o monetarismo. Adiante é de
   :DESENVOLVIMENTO: Atingindo minimamente
   :CONCLUSAO: Atingindo minimamente
   :CLAREZA:  Atingido parcialmente
-  :NOTA:     Atingido satisfatoriamente
+  :NOTA:     Atingido totalmente
   :END:
 
 ** Comentários individuais
