--- a/Materias/2S2020/PED_CE342/Turma_C/244207.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/244207.org
@@ -35,3 +35,18 @@
 ** Comentários individuais 
 
 Corretamente pontuou que no monetarismo a estabilidade de nível de preços pressupõe estabilidade no estoque de moeda. No entanto, não associou esta conclusão aos pressupostos teóricos do modelo (TQM). Além disso, a forma que descreve a regra monetária esta pouco precisa: estoque de moeda deve crescer a mesma taxa que o PIB. Adiante, elenca alguns dos principais conceitos do monetarismo, deixando a TQM de fora. Resultado disso é tratar a neutralidade da moeda enquanto pressuposto e não enquanto resultado do modelo. Descreveu corretamente o conceito de taxa natural de desemprego. Apresentou alguns dos componentes da curva de Phillips aceleracionista, mas não pontou que implica negação do trade-off inflação e desemprego no longo prazo. Apresenta corretamente a hipótese de expectativas adaptativas e o mesmo vale para a ilusão monetária e surpresa inflacionária. Apresenta TQM sem expor suas hipóteses e implicações: teoria da demanda por moeda que é estável. Encerra a resenha pontuando (de forma mais precisa) a proposição do regime de regras monetárias.
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:   Resenha 2
+  :OBJETIVO: Atingido parcialmente
+  :ARGUMENTO: Atingido satisfatoriamente
+  :CONCEITOS: Atingido parcialmente
+  :DESENVOLVIMENTO: Atingido satisfatoriamente
+  :CONCLUSAO: Atingido totalmente
+  :CLAREZA:  Atingido totalmente
+  :NOTA:     Atingido satisfatoriamente
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
