--- a/Materias/2S2020/PED_CE342/Turma_C/245099.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/245099.org
@@ -36,3 +36,18 @@
 
 Descreve corretamente o conceito de taxa natural de desemprego e o associa a curva de Phillips anterior à Friedman. Adiante, pontua a adição das expectativas dos agentes no modelo. No entanto, não descreve que tipo de expectativas são essas, por que desajustes salariais impactam o nível de emprego e nem a temporalidade dos efeitos desse desajuste. Adiante, menciona a ilusão monetária mas não a define. Ademais, não explica o porquê que expansões no estoque de moeda geram inflação. Para tanto, seria necessário apresentar a TQM e suas hipóteses subjacentes. Em seguida, pontua outros motivos do porquê a política monetária não deve ser discricionária. No parágrafo seguinte é mencionado que o sistema econômico seria estável, mas não estão presentes no texto os elementos para chegar a esse resultado (dica: TQM e subsequente estabilidade na demanda por moeda). Ao fim, é mencionada da TQM e suas implicações. Dada a importância deste constructo para os argumentos monetaristas, tal debate poderia ter sido antecipado. Por fim, não explicitado como deve ser a regra monetária a ser seguida (como devem se comportar os agregados monetários? devem crescer a mesma taxa que o PIB como sugere a TQM).
 
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:   Resenha 2
+  :OBJETIVO: Atingido parcialmente
+  :ARGUMENTO: Atingido satisfatoriamente
+  :CONCEITOS: Atingido satisfatoriamente
+  :DESENVOLVIMENTO: Atingido satisfatoriamente
+  :CONCLUSAO: Atingido totalmente
+  :CLAREZA:  Atingido totalmente
+  :NOTA:     Atingido satisfatoriamente
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
