--- a/Materias/2S2020/PED_CE342/Turma_C/Turma_C.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/Turma_C.org
@@ -18,23 +18,20 @@ import matplotlib.pyplot as plt
 import seaborn as sns
 import datetime
 import numpy as np
-import sympy as sp
+np.random.seed(3421)
 
 Turma = "C"
-
+full_path = './Materias/2S2020/PED_CE342/Turma_' + Turma
 Resenhas = ["Monetaristas", "Novos Clássicos", "Novos Keynesianos", "Novo Consenso"]
 #+END_SRC
 
 #+RESULTS:
-: Python 3.8.5 (default, Jul 28 2020, 12:59:40) 
-: [GCC 9.3.0] on linux
-: Type "help", "copyright", "credits" or "license" for more information.
-: python.el: native completion setup loaded
 
 ** Importando tabela Ana Rosa
 
 #+BEGIN_SRC python :export no
 df = pd.read_excel(
+    #'Materias/2S2020/PED_CE342/Lista presença 2020.xlsx',
     '../Lista presença 2020.xlsx',
     sheet_name="CE342_" + Turma,
     parse_dates=True,
@@ -51,9 +48,9 @@ min_df = df[["RA"]].astype(str)
 ** Funções
 
 #+BEGIN_SRC python
-def importar_ext(Turma=Turma, data="2020-10-19"):
+def importar_ext(Turma=Turma, data="2020-10-19", prefix='.'):
     tmp = pd.read_csv(
-        f'./Presença/Turma_{Turma} ({data}).csv',
+        f'{prefix}/Presença/Turma_{Turma} ({data}).csv',
         skiprows=3,
         usecols=[0,6,7],
         sep=',',
@@ -77,13 +74,28 @@ def importar_ext(Turma=Turma, data="2020-10-19"):
 #+RESULTS:
 
 ** Merge e exportação
-
+   
 #+BEGIN_SRC python
-monetaristas = pd.read_csv('./Notas/Monetaristas.csv')[["Endereço de e-mail", "Nota", "Status da atividade"]]
+monetaristas = pd.read_csv(
+#    full_path +
+    '.' + 
+    '/Notas/Monetaristas.csv'
+)[["Endereço de e-mail", "Nota", "Status da atividade"]]
 monetaristas["RA"] = [i[1:7] for i in  monetaristas["Endereço de e-mail"]]
 monetaristas.drop(["Endereço de e-mail", "Status da atividade"], axis="columns", inplace=True)
 monetaristas.set_index("RA", inplace=True)
 monetaristas.columns = ["Resenha Monetaristas"]
+
+nv_classicos = pd.read_csv(
+#    full_path +
+    '.' + 
+    '/Notas/NovosClassicos.csv'
+)[["Endereço de e-mail", "Nota"]]
+nv_classicos["RA"] = [i[1:7] for i in  nv_classicos["Endereço de e-mail"]]
+nv_classicos.drop(["Endereço de e-mail"], axis="columns", inplace=True)
+nv_classicos.set_index("RA", inplace=True)
+nv_classicos.columns = ["Resenha Novos Clássicos"]
+
 
 df = min_df.reset_index().merge(
     monetaristas.reset_index(),
@@ -94,16 +106,23 @@ df = min_df.reset_index().merge(
     ).join(
         importar_ext(Turma=Turma, data="2020-10-26"),
         how='left', on='Nome'
+    ).set_index('RA').join(
+        importar_ext(Turma=Turma, data="2020-11-09"),
+        how='left', on='Nome'
+     ).reset_index().merge(
+    nv_classicos.reset_index(),
+    how='left',
     ).set_index('RA')
 
-df["Email"] = [df["Nome"][i][0] + df.index[i] + "@dac.unicamp.br" for i in range(len(df.index))]
+df["Email"] = [df["Nome"][i][0] + str(df.index[i]) + "@dac.unicamp.br" for i in range(len(df.index))]
 
 df.to_csv(f'./output/CE342_{Turma}.csv')
 df.to_excel(f'./output/CE342_{Turma}.xlsx')
-
 #+END_SRC
 
 #+RESULTS:
+
+
 
 * Monetaristas
 
@@ -182,7 +201,7 @@ print('\end{center}')
 #+end_export
 
 ** Gráficos                                                          :ignore:
-
+*** Notas
 #+BEGIN_SRC python :results graphics file :file ./figs/monetaristas.png
 fig, ax = plt.subplots(1,2, figsize=(8,5), sharey=True)
 
@@ -209,11 +228,13 @@ ax[1].set_ylabel('Densidade')
 plt.tight_layout()
 fig.savefig('./figs/monetaristas.png')
 
-plt.show()
+plt.close()
 #+END_SRC
 
 #+RESULTS:
 [[file:./figs/monetaristas.png]]
+
+*** Notas e presença
 
 #+BEGIN_SRC python :results graphics file :file ./figs/monetaristas_presenca.png
 tmp = df.copy()
@@ -230,14 +251,192 @@ ax.set_title(f"Nota x Presença\nResenha {resenha} - Turma {Turma}")
 
 fig.savefig('./figs/monetaristas_presenca.png')
 
-plt.show()
-
+plt.close()
 #+END_SRC
 
 #+RESULTS:
 [[file:./figs/monetaristas_presenca.png]]
 
 * Novos Clássicos
+
+** Pendências                                                        :ignore:
+- [ ] Checar resenha Gabriel Pereira e Gabriel Sila Gonçalvez
+- [ ] Computar notas
+- [ ] Preencher presenhas na tabela da Ana Rosa
+** Notas                                                             :ignore:
+
+#+NAME:NovosCla
+#+BEGIN_SRC python :results table latex
+print('\\begin{center}')
+print(
+    df[["Resenha Novos Clássicos"]].to_latex(
+        caption=f"Notas das resenhas - {Resenhas[1]}",
+        bold_rows=True,
+        longtable=True,
+        na_rep='-',
+    ),end='')
+print('\end{center}')
+#+END_SRC
+
+#+RESULTS: NovosCla
+#+begin_export latex
+\begin{center}
+\begin{longtable}{lr}
+\caption{Notas das resenhas - Novos Clássicos}\\
+\toprule
+{} &  Resenha Novos Clássicos \\
+\textbf{RA    } &                          \\
+\midrule
+\endhead
+\midrule
+\multicolumn{2}{r}{{Continued on next page}} \\
+\midrule
+\endfoot
+
+\bottomrule
+\endlastfoot
+\textbf{230645} &                      5.0 \\
+\textbf{213549} &                      5.0 \\
+\textbf{257748} &                      7.0 \\
+\textbf{232568} &                      5.0 \\
+\textbf{233566} &                      7.0 \\
+\textbf{215626} &                      0.0 \\
+\textbf{91108 } &                        - \\
+\textbf{234311} &                      5.0 \\
+\textbf{216397} &                      0.0 \\
+\textbf{197474} &                      5.0 \\
+\textbf{234982} &                      0.0 \\
+\textbf{235042} &                      0.0 \\
+\textbf{197724} &                      5.0 \\
+\textbf{217350} &                      0.0 \\
+\textbf{174154} &                      0.0 \\
+\textbf{237534} &                      3.0 \\
+\textbf{237856} &                      5.0 \\
+\textbf{199967} &                      7.0 \\
+\textbf{103034} &                      5.0 \\
+\textbf{172577} &                      7.0 \\
+\textbf{159866} &                      5.0 \\
+\textbf{221896} &                     10.0 \\
+\textbf{257876} &                     10.0 \\
+\textbf{242087} &                        - \\
+\textbf{242328} &                      7.0 \\
+\textbf{147614} &                      0.0 \\
+\textbf{176104} &                        - \\
+\textbf{205149} &                      0.0 \\
+\textbf{205151} &                      7.0 \\
+\textbf{244207} &                      7.0 \\
+\textbf{158425} &                      7.0 \\
+\textbf{257932} &                      7.0 \\
+\textbf{177964} &                      5.0 \\
+\textbf{245099} &                      7.0 \\
+\textbf{206806} &                      0.0 \\
+\textbf{225851} &                      0.0 \\
+\end{longtable}
+\end{center}
+#+end_export
+
+** Gráficos                                                          :ignore:
+*** Notas   
+#+BEGIN_SRC python :results graphics file :file ./figs/novosclassicos.png
+fig, ax = plt.subplots(1,2, figsize=(8,5), sharey=True)
+sns.distplot(df['Resenha Novos Clássicos'], hist=True, kde=True, 
+             bins=int(10), color = 'darkblue', 
+             hist_kws={'edgecolor':'black'}, ax=ax[0],
+             kde_kws={'linewidth': 4, 'shade': True})
+mu = round(df["Resenha Novos Clássicos"].mean())
+
+sigma = df["Resenha Novos Clássicos"].std().round(1)/10
+
+ax[0].set_title(f'Nota das resenhas\nTurma {Turma}')
+ax[0].text(10, 0.5, f'$\mu = ${mu}', fontsize=12)
+ax[0].text(10, 0.47, f'$\sigma = ${sigma}', fontsize=12)
+
+
+sns.distplot(df[df['Resenha Novos Clássicos']>0]['Resenha Novos Clássicos'], hist=True, kde=True, 
+             bins=int(10), color = 'darkblue', 
+             hist_kws={'edgecolor':'black'}, ax=ax[1],
+             kde_kws={'linewidth': 4, 'shade': True})
+
+ax[1].set_title('Nota das resenhas\n(Exceto não entregues)')
+ax[1].text(10, 0.5, f"$\mu = ${df[df['Resenha Novos Clássicos']>0]['Resenha Novos Clássicos'].mean().round(1)}", fontsize=12)
+ax[1].text(10, 0.47, f"$\sigma = ${round(df[df['Resenha Novos Clássicos']>0]['Resenha Novos Clássicos'].std())/10}", fontsize=12)
+ax[1].set_ylabel('Densidade')
+
+plt.tight_layout()
+fig.savefig('./figs/novosclassicos.png')
+
+plt.close()
+#+END_SRC
+
+#+RESULTS:
+[[file:./figs/novosclassicos.png]]
+*** Notas e Presença
+#+BEGIN_SRC python :results graphics file :file ./figs/novosclassicos_presenca.png
+tmp = df.copy()
+
+tmp["Média presença"] = tmp[["2020-10-19", "2020-10-26", "2020-11-09"]].mean(axis=1)
+
+resenha = "Novos Clássicos"
+
+fig, ax = plt.subplots()
+
+sns.regplot(x="Média presença", y=f"Resenha {resenha}", data=tmp, ax=ax, y_jitter=.05);
+
+ax.set_title(f"Nota x Presença\nResenha {resenha} - Turma {Turma}")
+
+fig.savefig('./figs/novosclassicos_presenca.png')
+
+plt.close()
+#+END_SRC
+
+#+RESULTS:
+[[file:./figs/novosclassicos_presenca.png]]
+
+** Verificação de plágio por amostragem
+*** Sorteio
+    
+#+BEGIN_SRC python :results output :exports both
+pre_selecionados = ["216397", "235042"]
+alunos = df.shape[0]
+sample = 0.3
+amostra = round(alunos*sample)
+bad_df = df.index.isin(pre_selecionados)
+elegivies = df.loc[~bad_df].query('`Resenha Novos Clássicos` > 0')["Resenha Novos Clássicos"].index.tolist()
+
+resultado = np.sort(np.random.choice(
+    a = elegivies,
+    size = amostra,
+    replace = False # Sem repetição
+))
+resultado = pd.DataFrame(resultado)
+resultado.columns = ["RA Sorteados"]
+resultado.index = [i + 1 for i in resultado.index]
+print(resultado)
+resultado
+#+END_SRC
+
+#+RESULTS:
+#+begin_example
+RA Sorteados
+1        103034
+2        199967
+3        205151
+4        213549
+5        230645
+6        232568
+7        233566
+8        237856
+9        242328
+10       245099
+11       257876
+#+end_example
+
+
+
+
+
+*** Resultado Turnitin
+
 * Lista de presença e notas
 ** Lista de chamada com nota das resenhas                            :ignore:
 #+NAME:Lista
@@ -261,56 +460,56 @@ print('\end{landscape}\end{center}')
 \small
 \setlength\LTleft{0pt}
 \setlength\LTright{0pt}
-\begin{longtable}{llrrrl}
+\begin{longtable}{llrrrrrl}
 \caption{Lista de presença e de notas}\label{lista}\\
 \toprule
-{} &                                   Nome &  Resenha Monetaristas &  2020-10-19 &  2020-10-26 &                   Email \\
-\textbf{RA    } &                                        &                       &             &             &                         \\
+{} &                                   Nome &  Resenha Monetaristas &  2020-10-19 &  2020-10-26 &  2020-11-09 &  Resenha Novos Clássicos &                   Email \\
+\textbf{RA    } &                                        &                       &             &             &             &                          &                         \\
 \midrule
 \endhead
 \midrule
-\multicolumn{6}{r}{{Continued on next page}} \\
+\multicolumn{8}{r}{{Continued on next page}} \\
 \midrule
 \endfoot
 
 \bottomrule
 \endlastfoot
-\textbf{230645} &                    alice pereira dario &                  50.0 &       17.86 &        0.00 &  a230645@dac.unicamp.br \\
-\textbf{213549} &           beatriz helena toledo pastre &                  30.0 &        0.00 &        0.00 &  b213549@dac.unicamp.br \\
-\textbf{257748} &             breno rivelino fima castro &                  50.0 &        7.14 &        5.31 &  b257748@dac.unicamp.br \\
-\textbf{232568} &                 caio cimino de almeida &                  70.0 &           - &        2.65 &  c232568@dac.unicamp.br \\
-\textbf{233566} &                 diego tabacof labriola &                  30.0 &        0.00 &        0.00 &  d233566@dac.unicamp.br \\
-\textbf{215626} &                felipe barbosa de souza &                   0.0 &        0.00 &        0.00 &  f215626@dac.unicamp.br \\
-\textbf{91108 } &                 felipe eboli sotorilli &                     - &        1.79 &        0.00 &   f91108@dac.unicamp.br \\
-\textbf{234311} &                  felipe rubbo aguilera &                  50.0 &       33.93 &        1.77 &  f234311@dac.unicamp.br \\
-\textbf{216397} &                        gabriel pereira &                  30.0 &        0.00 &        0.88 &  g216397@dac.unicamp.br \\
-\textbf{197474} &                gabriel pereira jovetta &                  50.0 &        0.00 &        4.42 &  g197474@dac.unicamp.br \\
-\textbf{234982} &                 gabriel pereira santos &                   0.0 &           - &       13.27 &  g234982@dac.unicamp.br \\
-\textbf{235042} &                gabriel silva gonçalves &                   0.0 &        0.00 &        0.00 &  g235042@dac.unicamp.br \\
-\textbf{197724} &           gabriela santana das virgens &                  50.0 &        0.00 &        0.88 &  g197724@dac.unicamp.br \\
-\textbf{217350} &       guilherme yoshio agata domingues &                  30.0 &           - &           - &  g217350@dac.unicamp.br \\
-\textbf{174154} &               gustavo josé lara campos &                  30.0 &        0.00 &        4.42 &  g174154@dac.unicamp.br \\
-\textbf{237534} &         joao mateus rodrigues da silva &                  30.0 &           - &           - &  j237534@dac.unicamp.br \\
-\textbf{237856} &        joão vitor dos santos rodrigues &                  50.0 &        1.79 &        0.00 &  j237856@dac.unicamp.br \\
-\textbf{199967} &                   jonas pereira cintra &                  70.0 &        0.00 &        3.54 &  j199967@dac.unicamp.br \\
-\textbf{103034} &  leonardo augusto de oliveira piovesan &                  50.0 &        0.00 &        0.00 &  l103034@dac.unicamp.br \\
-\textbf{172577} &                   lucas azevedo soares &                  50.0 &        2.68 &        5.31 &  l172577@dac.unicamp.br \\
-\textbf{159866} &              marcela chenfel dos anjos &                  50.0 &        0.89 &        0.00 &  m159866@dac.unicamp.br \\
-\textbf{221896} &               mariana sayuri silva doi &                  70.0 &       34.82 &        0.88 &  m221896@dac.unicamp.br \\
-\textbf{257876} &    maryana beatriz ventura de carvalho &                 100.0 &       67.86 &        0.88 &  m257876@dac.unicamp.br \\
-\textbf{242087} &                          miguel razera &                   0.0 &        0.89 &        1.77 &  m242087@dac.unicamp.br \\
-\textbf{242328} &    natalia kimberlle tavares imperiano &                  50.0 &           - &           - &  n242328@dac.unicamp.br \\
-\textbf{147614} &          pedro augusto de almeida rosa &                   0.0 &        0.00 &        0.00 &  p147614@dac.unicamp.br \\
-\textbf{176104} &              rafael da silva tomasella &                   0.0 &           - &           - &  r176104@dac.unicamp.br \\
-\textbf{205149} &                 raphaela freitas souza &                 100.0 &           - &           - &  r205149@dac.unicamp.br \\
-\textbf{205151} &               raphaela prado francisco &                   0.0 &        0.89 &       47.79 &  r205151@dac.unicamp.br \\
-\textbf{244207} &                 sanny alves dos santos &                  70.0 &        0.89 &        0.00 &  s244207@dac.unicamp.br \\
-\textbf{158425} &                           tales alonso &                  50.0 &        0.89 &       61.95 &  t158425@dac.unicamp.br \\
-\textbf{257932} &              thaís monello de oliveira &                 100.0 &        0.89 &        0.00 &  t257932@dac.unicamp.br \\
-\textbf{177964} &               victor hugo alves duarte &                  70.0 &        0.00 &        0.00 &  v177964@dac.unicamp.br \\
-\textbf{245099} &                            victor maia &                  50.0 &       16.07 &       53.98 &  v245099@dac.unicamp.br \\
-\textbf{206806} &            vinicius jeronimo capodalio &                  50.0 &        0.00 &        7.08 &  v206806@dac.unicamp.br \\
-\textbf{225851} &                william de sousa rabelo &                  50.0 &           - &           - &  w225851@dac.unicamp.br \\
+\textbf{230645} &                    alice pereira dario &                  50.0 &       17.86 &        0.00 &       19.47 &                      5.0 &  a230645@dac.unicamp.br \\
+\textbf{213549} &           beatriz helena toledo pastre &                  30.0 &        0.00 &        0.00 &        6.19 &                      5.0 &  b213549@dac.unicamp.br \\
+\textbf{257748} &             breno rivelino fima castro &                  50.0 &        7.14 &        5.31 &       93.81 &                      7.0 &  b257748@dac.unicamp.br \\
+\textbf{232568} &                 caio cimino de almeida &                  70.0 &           - &        2.65 &       54.87 &                      5.0 &  c232568@dac.unicamp.br \\
+\textbf{233566} &                 diego tabacof labriola &                  30.0 &        0.00 &        0.00 &       91.15 &                      7.0 &  d233566@dac.unicamp.br \\
+\textbf{215626} &                felipe barbosa de souza &                   0.0 &        0.00 &        0.00 &        0.00 &                      0.0 &  f215626@dac.unicamp.br \\
+\textbf{91108 } &                 felipe eboli sotorilli &                     - &        1.79 &        0.00 &       77.88 &                        - &   f91108@dac.unicamp.br \\
+\textbf{234311} &                  felipe rubbo aguilera &                  50.0 &       33.93 &        1.77 &       92.92 &                      5.0 &  f234311@dac.unicamp.br \\
+\textbf{216397} &                        gabriel pereira &                  30.0 &        0.00 &        0.88 &       76.11 &                      0.0 &  g216397@dac.unicamp.br \\
+\textbf{197474} &                gabriel pereira jovetta &                  50.0 &        0.00 &        4.42 &       51.33 &                      5.0 &  g197474@dac.unicamp.br \\
+\textbf{234982} &                 gabriel pereira santos &                   0.0 &           - &       13.27 &        0.00 &                      0.0 &  g234982@dac.unicamp.br \\
+\textbf{235042} &                gabriel silva gonçalves &                   0.0 &        0.00 &        0.00 &        0.00 &                      0.0 &  g235042@dac.unicamp.br \\
+\textbf{197724} &           gabriela santana das virgens &                  50.0 &        0.00 &        0.88 &       74.34 &                      5.0 &  g197724@dac.unicamp.br \\
+\textbf{217350} &       guilherme yoshio agata domingues &                  30.0 &           - &           - &           - &                      0.0 &  g217350@dac.unicamp.br \\
+\textbf{174154} &               gustavo josé lara campos &                  30.0 &        0.00 &        4.42 &       16.81 &                      0.0 &  g174154@dac.unicamp.br \\
+\textbf{237534} &         joao mateus rodrigues da silva &                  30.0 &           - &           - &           - &                      3.0 &  j237534@dac.unicamp.br \\
+\textbf{237856} &        joão vitor dos santos rodrigues &                  50.0 &        1.79 &        0.00 &       91.15 &                      5.0 &  j237856@dac.unicamp.br \\
+\textbf{199967} &                   jonas pereira cintra &                  70.0 &        0.00 &        3.54 &       82.30 &                      7.0 &  j199967@dac.unicamp.br \\
+\textbf{103034} &  leonardo augusto de oliveira piovesan &                  50.0 &        0.00 &        0.00 &       93.81 &                      5.0 &  l103034@dac.unicamp.br \\
+\textbf{172577} &                   lucas azevedo soares &                  50.0 &        2.68 &        5.31 &       14.16 &                      7.0 &  l172577@dac.unicamp.br \\
+\textbf{159866} &              marcela chenfel dos anjos &                  50.0 &        0.89 &        0.00 &       91.15 &                      5.0 &  m159866@dac.unicamp.br \\
+\textbf{221896} &               mariana sayuri silva doi &                  70.0 &       34.82 &        0.88 &       18.58 &                     10.0 &  m221896@dac.unicamp.br \\
+\textbf{257876} &    maryana beatriz ventura de carvalho &                 100.0 &       67.86 &        0.88 &       93.81 &                     10.0 &  m257876@dac.unicamp.br \\
+\textbf{242087} &                          miguel razera &                   0.0 &        0.89 &        1.77 &        0.00 &                        - &  m242087@dac.unicamp.br \\
+\textbf{242328} &    natalia kimberlle tavares imperiano &                  50.0 &           - &           - &        0.88 &                      7.0 &  n242328@dac.unicamp.br \\
+\textbf{147614} &          pedro augusto de almeida rosa &                   0.0 &        0.00 &        0.00 &        0.00 &                      0.0 &  p147614@dac.unicamp.br \\
+\textbf{176104} &              rafael da silva tomasella &                   0.0 &           - &           - &           - &                        - &  r176104@dac.unicamp.br \\
+\textbf{205149} &                 raphaela freitas souza &                 100.0 &           - &           - &           - &                      0.0 &  r205149@dac.unicamp.br \\
+\textbf{205151} &               raphaela prado francisco &                   0.0 &        0.89 &       47.79 &        4.42 &                      7.0 &  r205151@dac.unicamp.br \\
+\textbf{244207} &                 sanny alves dos santos &                  70.0 &        0.89 &        0.00 &        0.00 &                      7.0 &  s244207@dac.unicamp.br \\
+\textbf{158425} &                           tales alonso &                  50.0 &        0.89 &       61.95 &       61.06 &                      7.0 &  t158425@dac.unicamp.br \\
+\textbf{257932} &              thaís monello de oliveira &                 100.0 &        0.89 &        0.00 &       30.09 &                      7.0 &  t257932@dac.unicamp.br \\
+\textbf{177964} &               victor hugo alves duarte &                  70.0 &        0.00 &        0.00 &        0.00 &                      5.0 &  v177964@dac.unicamp.br \\
+\textbf{245099} &                            victor maia &                  50.0 &       16.07 &       53.98 &       70.80 &                      7.0 &  v245099@dac.unicamp.br \\
+\textbf{206806} &            vinicius jeronimo capodalio &                  50.0 &        0.00 &        7.08 &        2.65 &                      0.0 &  v206806@dac.unicamp.br \\
+\textbf{225851} &                william de sousa rabelo &                  50.0 &           - &           - &           - &                      0.0 &  w225851@dac.unicamp.br \\
 \end{longtable}
 \end{landscape}\end{center}
 #+end_export
