--- a/Materias/2S2020/PED_CE342/Turma_A/Turma_A.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/Turma_A.org
@@ -19,9 +19,9 @@ import seaborn as sns
 import datetime
 import numpy as np
 import sympy as sp
-
+np.random.seed(3421)
 Turma = "A"
-
+full_path = './Materias/2S2020/PED_CE342/Turma_' + Turma
 Resenhas = ["Monetaristas", "Novos Clássicos", "Novos Keynesianos", "Novo Consenso"]
 #+END_SRC
 
@@ -31,6 +31,7 @@ Resenhas = ["Monetaristas", "Novos Clássicos", "Novos Keynesianos", "Novo Conse
 
 #+BEGIN_SRC python :export no
 df = pd.read_excel(
+    #'Materias/2S2020/PED_CE342/Lista presença 2020.xlsx',
     '../Lista presença 2020.xlsx',
     sheet_name="CE342_" + Turma,
     parse_dates=True,
@@ -47,9 +48,9 @@ min_df = df[["RA"]].astype(str)
 ** Funções
 
 #+BEGIN_SRC python
-def importar_ext(Turma=Turma, data="2020-10-19"):
+def importar_ext(Turma=Turma, data="2020-10-19", prefix='.'):
     tmp = pd.read_csv(
-        f'./Presença/Turma_{Turma} ({data}).csv',
+        f'{prefix}/Presença/Turma_{Turma} ({data}).csv',
         skiprows=3,
         usecols=[0,6,7],
         sep=',',
@@ -73,13 +74,28 @@ def importar_ext(Turma=Turma, data="2020-10-19"):
 #+RESULTS:
 
 ** Merge e exportação
-
+   
 #+BEGIN_SRC python
-monetaristas = pd.read_csv('./Notas/Monetaristas.csv')[["Endereço de e-mail", "Nota", "Status da atividade"]]
+monetaristas = pd.read_csv(
+#    full_path +
+    '.' + 
+    '/Notas/Monetaristas.csv'
+)[["Endereço de e-mail", "Nota", "Status da atividade"]]
 monetaristas["RA"] = [i[1:7] for i in  monetaristas["Endereço de e-mail"]]
 monetaristas.drop(["Endereço de e-mail", "Status da atividade"], axis="columns", inplace=True)
 monetaristas.set_index("RA", inplace=True)
 monetaristas.columns = ["Resenha Monetaristas"]
+
+nv_classicos = pd.read_csv(
+#    full_path +
+    '.' + 
+    '/Notas/NovosClassicos.csv'
+)[["Endereço de e-mail", "Nota"]]
+nv_classicos["RA"] = [i[1:7] for i in  nv_classicos["Endereço de e-mail"]]
+nv_classicos.drop(["Endereço de e-mail"], axis="columns", inplace=True)
+nv_classicos.set_index("RA", inplace=True)
+nv_classicos.columns = ["Resenha Novos Clássicos"]
+
 
 df = min_df.reset_index().merge(
     monetaristas.reset_index(),
@@ -90,19 +106,23 @@ df = min_df.reset_index().merge(
     ).join(
         importar_ext(Turma=Turma, data="2020-10-26"),
         how='left', on='Nome'
-    ).join(
+    ).set_index('RA').join(
         importar_ext(Turma=Turma, data="2020-11-09"),
         how='left', on='Nome'
+     ).reset_index().merge(
+    nv_classicos.reset_index(),
+    how='left',
     ).set_index('RA')
 
-df["Email"] = [df["Nome"][i][0] + df.index[i] + "@dac.unicamp.br" for i in range(len(df.index))]
+df["Email"] = [df["Nome"][i][0] + str(df.index[i]) + "@dac.unicamp.br" for i in range(len(df.index))]
 
 df.to_csv(f'./output/CE342_{Turma}.csv')
 df.to_excel(f'./output/CE342_{Turma}.xlsx')
-
 #+END_SRC
 
 #+RESULTS:
+
+
 
 * Monetaristas
 
@@ -188,7 +208,7 @@ print('\end{center}')
 #+end_export
 
 ** Gráficos                                                          :ignore:
-
+*** Notas
 #+BEGIN_SRC python :results graphics file :file ./figs/monetaristas.png
 fig, ax = plt.subplots(1,2, figsize=(8,5), sharey=True)
 
@@ -215,11 +235,13 @@ ax[1].set_ylabel('Densidade')
 plt.tight_layout()
 fig.savefig('./figs/monetaristas.png')
 
-plt.show()
+plt.close()
 #+END_SRC
 
 #+RESULTS:
 [[file:./figs/monetaristas.png]]
+
+*** Notas e presença
 
 #+BEGIN_SRC python :results graphics file :file ./figs/monetaristas_presenca.png
 tmp = df.copy()
@@ -236,8 +258,7 @@ ax.set_title(f"Nota x Presença\nResenha {resenha} - Turma {Turma}")
 
 fig.savefig('./figs/monetaristas_presenca.png')
 
-plt.show()
-
+plt.close()
 #+END_SRC
 
 #+RESULTS:
@@ -246,15 +267,18 @@ plt.show()
 * Novos Clássicos
 
 ** Pendências                                                        :ignore:
-
+- [ ] Checar resenha Juliana Florentina
+- [ ] Identificar respostas das questões (forms)
+- [ ] Computar notas
+- [ ] Preencher presenhas na tabela da Ana Rosa
 ** Notas                                                             :ignore:
 
-#+NAME:Monetaristas
-#+BEGIN_SRC python :results table latex :eval no
+#+NAME:NovosCla
+#+BEGIN_SRC python :results table latex
 print('\\begin{center}')
 print(
-    df[["Resenha Monetaristas"]].to_latex(
-        caption=f"Notas das resenhas - {Resenhas[0]}",
+    df[["Resenha Novos Clássicos"]].to_latex(
+        caption=f"Notas das resenhas - {Resenhas[1]}",
         bold_rows=True,
         longtable=True,
         na_rep='-',
@@ -262,14 +286,14 @@ print(
 print('\end{center}')
 #+END_SRC
 
-#+RESULTS: Monetaristas
+#+RESULTS: NovosCla
 #+begin_export latex
 \begin{center}
 \begin{longtable}{lr}
-\caption{Notas das resenhas - Monetaristas}\\
+\caption{Notas das resenhas - Novos Clássicos}\\
 \toprule
-{} &  Resenha Monetaristas \\
-\textbf{RA    } &                       \\
+{} &  Resenha Novos Clássicos \\
+\textbf{RA    } &                          \\
 \midrule
 \endhead
 \midrule
@@ -279,93 +303,95 @@ print('\end{center}')
 
 \bottomrule
 \endlastfoot
-\textbf{212883} &                  50.0 \\
-\textbf{212900} &                  50.0 \\
-\textbf{231302} &                  70.0 \\
-\textbf{231732} &                   0.0 \\
-\textbf{213360} &                  70.0 \\
-\textbf{231898} &                  70.0 \\
-\textbf{213731} &                  70.0 \\
-\textbf{232395} &                  30.0 \\
-\textbf{232796} &                  70.0 \\
-\textbf{233335} &                  50.0 \\
-\textbf{233747} &                  70.0 \\
-\textbf{255207} &                  50.0 \\
-\textbf{216459} &                   0.0 \\
-\textbf{235951} &                  30.0 \\
-\textbf{236276} &                   0.0 \\
-\textbf{218090} &                  70.0 \\
-\textbf{255241} &                  50.0 \\
-\textbf{237618} &                  70.0 \\
-\textbf{199735} &                  50.0 \\
-\textbf{218975} &                  70.0 \\
-\textbf{238414} &                  70.0 \\
-\textbf{219613} &                  50.0 \\
-\textbf{219907} &                 100.0 \\
-\textbf{239052} &                  70.0 \\
-\textbf{220194} &                  70.0 \\
-\textbf{201326} &                  50.0 \\
-\textbf{156242} &                   0.0 \\
-\textbf{240317} &                  30.0 \\
-\textbf{240409} &                  70.0 \\
-\textbf{221515} &                  50.0 \\
-\textbf{255293} &                  30.0 \\
-\textbf{241430} &                  50.0 \\
-\textbf{222315} &                  50.0 \\
-\textbf{184528} &                  50.0 \\
-\textbf{222615} &                  70.0 \\
-\textbf{186966} &                   0.0 \\
-\textbf{244321} &                  50.0 \\
-\textbf{244379} &                  50.0 \\
-\textbf{187323} &                 100.0 \\
-\textbf{206194} &                  50.0 \\
-\textbf{245212} &                 100.0 \\
-\textbf{206883} &                   0.0 \\
-\textbf{245459} &                  70.0 \\
+\textbf{212883} &                      5.0 \\
+\textbf{212900} &                     10.0 \\
+\textbf{231302} &                      5.0 \\
+\textbf{231732} &                        - \\
+\textbf{213360} &                     10.0 \\
+\textbf{231898} &                      5.0 \\
+\textbf{213731} &                     10.0 \\
+\textbf{232395} &                      7.0 \\
+\textbf{232796} &                      5.0 \\
+\textbf{233335} &                      5.0 \\
+\textbf{233747} &                     10.0 \\
+\textbf{255207} &                      0.0 \\
+\textbf{216459} &                        - \\
+\textbf{235951} &                        - \\
+\textbf{236276} &                        - \\
+\textbf{218090} &                     10.0 \\
+\textbf{255241} &                      7.0 \\
+\textbf{237618} &                     10.0 \\
+\textbf{199735} &                      0.0 \\
+\textbf{218975} &                      5.0 \\
+\textbf{238414} &                      0.0 \\
+\textbf{219613} &                      5.0 \\
+\textbf{219907} &                      7.0 \\
+\textbf{239052} &                      7.0 \\
+\textbf{220194} &                      5.0 \\
+\textbf{201326} &                     10.0 \\
+\textbf{156242} &                      5.0 \\
+\textbf{240317} &                      5.0 \\
+\textbf{240409} &                      7.0 \\
+\textbf{221515} &                      5.0 \\
+\textbf{255293} &                      0.0 \\
+\textbf{241430} &                      5.0 \\
+\textbf{222315} &                     10.0 \\
+\textbf{184528} &                      0.0 \\
+\textbf{222615} &                      3.0 \\
+\textbf{186966} &                      0.0 \\
+\textbf{244321} &                      5.0 \\
+\textbf{244379} &                      5.0 \\
+\textbf{187323} &                      7.0 \\
+\textbf{206194} &                      5.0 \\
+\textbf{245212} &                     10.0 \\
+\textbf{206883} &                      3.0 \\
+\textbf{245459} &                      5.0 \\
 \end{longtable}
 \end{center}
 #+end_export
 
 ** Gráficos                                                          :ignore:
-
-#+BEGIN_SRC python :results graphics file :file ./figs/novosclassicos.png :eval no
+*** Notas   
+#+BEGIN_SRC python :results graphics file :file ./figs/novosclassicos.png
 fig, ax = plt.subplots(1,2, figsize=(8,5), sharey=True)
-
-sns.distplot(df['Resenha Monetaristas'], hist=True, kde=True, 
+sns.distplot(df['Resenha Novos Clássicos'], hist=True, kde=True, 
              bins=int(10), color = 'darkblue', 
              hist_kws={'edgecolor':'black'}, ax=ax[0],
              kde_kws={'linewidth': 4, 'shade': True})
+mu = round(df["Resenha Novos Clássicos"].mean())
+
+sigma = df["Resenha Novos Clássicos"].std().round(1)/10
 
 ax[0].set_title(f'Nota das resenhas\nTurma {Turma}')
-ax[0].text(90, 0.03, f'$\mu = ${df["Resenha Monetaristas"].mean().round(1)/10}', fontsize=12)
-ax[0].text(90, 0.027, f'$\sigma = ${df["Resenha Monetaristas"].std().round(1)/10}', fontsize=12)
+ax[0].text(10, 0.5, f'$\mu = ${mu}', fontsize=12)
+ax[0].text(10, 0.47, f'$\sigma = ${sigma}', fontsize=12)
 
 
-sns.distplot(df[df['Resenha Monetaristas']>0]['Resenha Monetaristas'], hist=True, kde=True, 
+sns.distplot(df[df['Resenha Novos Clássicos']>0]['Resenha Novos Clássicos'], hist=True, kde=True, 
              bins=int(10), color = 'darkblue', 
              hist_kws={'edgecolor':'black'}, ax=ax[1],
              kde_kws={'linewidth': 4, 'shade': True})
 
 ax[1].set_title('Nota das resenhas\n(Exceto não entregues)')
-ax[1].text(90, 0.03, f"$\mu = ${df[df['Resenha Monetaristas']>0]['Resenha Monetaristas'].mean().round(1)/10}", fontsize=12)
-ax[1].text(90, 0.027, f"$\sigma = ${round(df[df['Resenha Monetaristas']>0]['Resenha Monetaristas'].std())/10}", fontsize=12)
+ax[1].text(10, 0.5, f"$\mu = ${df[df['Resenha Novos Clássicos']>0]['Resenha Novos Clássicos'].mean().round(1)}", fontsize=12)
+ax[1].text(10, 0.47, f"$\sigma = ${round(df[df['Resenha Novos Clássicos']>0]['Resenha Novos Clássicos'].std())/10}", fontsize=12)
 ax[1].set_ylabel('Densidade')
 
 plt.tight_layout()
-fig.savefig('./figs/monetaristas.png')
+fig.savefig('./figs/novosclassicos.png')
 
-plt.show()
+plt.close()
 #+END_SRC
 
 #+RESULTS:
-[[file:./figs/monetaristas.png]]
-
-#+BEGIN_SRC python :results graphics file :file ./figs/novosclassicos_presenca.png :eval no
+[[file:./figs/novosclassicos.png]]
+*** Notas e Presença
+#+BEGIN_SRC python :results graphics file :file ./figs/novosclassicos_presenca.png
 tmp = df.copy()
 
-tmp["Média presença"] = tmp[["2020-10-19", "2020-10-26"]].mean(axis=1)
+tmp["Média presença"] = tmp[["2020-10-19", "2020-10-26", "2020-11-09"]].mean(axis=1)
 
-resenha = "Monetaristas"
+resenha = "Novos Clássicos"
 
 fig, ax = plt.subplots()
 
@@ -373,15 +399,60 @@ sns.regplot(x="Média presença", y=f"Resenha {resenha}", data=tmp, ax=ax, y_jit
 
 ax.set_title(f"Nota x Presença\nResenha {resenha} - Turma {Turma}")
 
-fig.savefig('./figs/monetaristas_presenca.png')
+fig.savefig('./figs/novosclassicos_presenca.png')
 
-plt.show()
-
+plt.close()
 #+END_SRC
 
 #+RESULTS:
-[[file:./figs/monetaristas_presenca.png]]
+[[file:./figs/novosclassicos_presenca.png]]
 
+** Verificação de plágio por amostragem
+*** Sorteio
+    
+#+BEGIN_SRC python :results output :exports both
+pre_selecionados = ["238414"]
+alunos = df.shape[0]
+sample = 0.3
+amostra = round(alunos*sample)
+bad_df = df.index.isin(pre_selecionados)
+elegivies = df.loc[~bad_df].query('`Resenha Novos Clássicos` > 0')["Resenha Novos Clássicos"].index.tolist()
+
+resultado = np.sort(np.random.choice(
+    a = elegivies,
+    size = amostra,
+    replace = False # Sem repetição
+))
+resultado = pd.DataFrame(resultado)
+resultado.columns = ["RA Sorteados"]
+resultado.index = [i + 1 for i in resultado.index]
+print(resultado)
+resultado
+#+END_SRC
+
+#+RESULTS:
+#+begin_example
+RA Sorteados
+1        156242
+2        187323
+3        212900
+4        219613
+5        219907
+6        222615
+7        231302
+8        232796
+9        239052
+10       240409
+11       244321
+12       244379
+13       245459
+#+end_example
+
+
+
+
+
+*** Resultado Turnitin
 
 * Lista de presença e notas
 ** Lista de chamada com nota das resenhas                            :ignore:
@@ -406,68 +477,63 @@ print('\end{landscape}\end{center}')
 \small
 \setlength\LTleft{0pt}
 \setlength\LTright{0pt}
-\begin{longtable}{llrrrl}
+\begin{longtable}{llrrrrrl}
 \caption{Lista de presença e de notas}\label{lista}\\
 \toprule
-{} &                                  Nome &  Resenha Monetaristas &  2020-10-19 &  2020-10-26 &                   Email \\
-\textbf{RA    } &                                       &                       &             &             &                         \\
+{} &                                  Nome &  Resenha Monetaristas &  2020-10-19 &  2020-10-26 &  2020-11-09 &  Resenha Novos Clássicos &                   Email \\
+\textbf{RA    } &                                       &                       &             &             &             &                          &                         \\
 \midrule
 \endhead
 \midrule
-\multicolumn{6}{r}{{Continued on next page}} \\
+\multicolumn{8}{r}{{Continued on next page}} \\
 \midrule
 \endfoot
 
 \bottomrule
 \endlastfoot
-\textbf{212883} &                    ana pasti villalba &                  50.0 &           - &           - &  a212883@dac.unicamp.br \\
-\textbf{212900} &                     ana paula martins &                  50.0 &        0.00 &        0.00 &  a212900@dac.unicamp.br \\
-\textbf{231302} &              andré apolinário cardoso &                  70.0 &        0.00 &        0.00 &  a231302@dac.unicamp.br \\
-\textbf{231732} &             artur preciozo figliolino &                   0.0 &        0.00 &        0.00 &  a231732@dac.unicamp.br \\
-\textbf{213360} &                    augusto lima alves &                  70.0 &       54.03 &        0.00 &  a213360@dac.unicamp.br \\
-\textbf{231898} &         beatriz consolmagno de marchi &                  70.0 &        1.61 &        0.00 &  b231898@dac.unicamp.br \\
-\textbf{213731} &                     bianca senne roma &                  70.0 &       29.03 &       62.64 &  b213731@dac.unicamp.br \\
-\textbf{232395} &                   bruno bueno de lima &                  30.0 &        0.00 &        0.00 &  b232395@dac.unicamp.br \\
-\textbf{232796} &          carlos henrique araujo viana &                  70.0 &        4.84 &       14.29 &  c232796@dac.unicamp.br \\
-\textbf{233335} &                 danielle araujo sousa &                  50.0 &        1.61 &        0.00 &  d233335@dac.unicamp.br \\
-\textbf{233747} &          eduardo ranieri guedes pinto &                  70.0 &       49.19 &       19.78 &  e233747@dac.unicamp.br \\
-\textbf{255207} &                  fernanda lima santos &                  50.0 &           - &           - &  f255207@dac.unicamp.br \\
-\textbf{216459} &            gabriel santana rosmaninho &                   0.0 &        0.00 &        0.00 &  g216459@dac.unicamp.br \\
-\textbf{235951} &                guilherme garcia gobbo &                  30.0 &        2.42 &        0.00 &  g235951@dac.unicamp.br \\
-\textbf{236276} &               gustavo henrique biondi &                   0.0 &        0.00 &        1.10 &  g236276@dac.unicamp.br \\
-\textbf{218090} &            isabela de oliveira garcia &                  70.0 &        1.61 &        0.00 &  i218090@dac.unicamp.br \\
-\textbf{255241} &             isabella rodrigues soares &                  50.0 &        0.81 &        0.00 &  i255241@dac.unicamp.br \\
-\textbf{237618} &           joão pedro de paula e silva &                  70.0 &        2.42 &        0.00 &  j237618@dac.unicamp.br \\
-\textbf{199735} &                    joao pedro gabriel &                  50.0 &       11.29 &        0.00 &  j199735@dac.unicamp.br \\
-\textbf{218975} &                joão vitor santos melo &                  70.0 &       22.58 &        8.79 &  j218975@dac.unicamp.br \\
-\textbf{238414} &     juliana florentina fernandes leão &                  70.0 &       16.94 &       40.66 &  j238414@dac.unicamp.br \\
-\textbf{219613} &  keivan de castro almeida g. de souza &                  50.0 &        6.45 &        0.00 &  k219613@dac.unicamp.br \\
-\textbf{219907} &           laura maria alves de mattos &                 100.0 &        2.42 &        0.00 &  l219907@dac.unicamp.br \\
-\textbf{239052} &        lavínia dias de oliveira roman &                  70.0 &       11.29 &        0.00 &  l239052@dac.unicamp.br \\
-\textbf{220194} &             leonardo tredici de souza &                  70.0 &        0.81 &        1.10 &  l220194@dac.unicamp.br \\
-\textbf{201326} &               leonardo vitor da silva &                  50.0 &       75.81 &        0.00 &  l201326@dac.unicamp.br \\
-\textbf{156242} &                 leticia da silva cruz &                   0.0 &           - &           - &  l156242@dac.unicamp.br \\
-\textbf{240317} &                       luis felipe avi &                  30.0 &           - &       30.77 &  l240317@dac.unicamp.br \\
-\textbf{240409} &                luísa mendes amstalden &                  70.0 &        5.65 &        0.00 &  l240409@dac.unicamp.br \\
-\textbf{221515} &        marcos baldez lagoeiro barroso &                  50.0 &        0.81 &        1.10 &  m221515@dac.unicamp.br \\
-\textbf{255293} &         maria júlia faustino da silva &                  30.0 &           - &           - &  m255293@dac.unicamp.br \\
-\textbf{241430} &              marina de marco santucci &                  50.0 &        0.00 &       74.73 &  m241430@dac.unicamp.br \\
-\textbf{222315} &                 matheus oliveira lima &                  50.0 &        0.81 &        0.00 &  m222315@dac.unicamp.br \\
-\textbf{184528} &       maycon jefferson teodoro bosing &                  50.0 &        0.00 &       71.43 &  m184528@dac.unicamp.br \\
-\textbf{222615} &     moises aparecido dos santos filho &                  70.0 &        0.00 &        0.00 &  m222615@dac.unicamp.br \\
-\textbf{186966} &     samuel henrique rezende bernardes &                   0.0 &           - &           - &  s186966@dac.unicamp.br \\
-\textbf{244321} &         sofia helena de oliveira nery &                  50.0 &        3.23 &        0.00 &  s244321@dac.unicamp.br \\
-\textbf{244379} &                stefanno felipe bicudo &                  50.0 &        1.61 &        0.00 &  s244379@dac.unicamp.br \\
-\textbf{187323} &              tatiana marchiori keller &                 100.0 &        0.00 &        0.00 &  t187323@dac.unicamp.br \\
-\textbf{206194} &       thiago alexandre ramos dos reis &                  50.0 &       46.77 &        1.10 &  t206194@dac.unicamp.br \\
-\textbf{245212} &          victoria silva torres santos &                 100.0 &           - &           - &  v245212@dac.unicamp.br \\
-\textbf{206883} &       vinicius santos bering da silva &                   0.0 &       16.94 &        0.00 &  v206883@dac.unicamp.br \\
-\textbf{245459} &                     vinicius venancio &                  70.0 &        4.84 &        1.10 &  v245459@dac.unicamp.br \\
+\textbf{212883} &                    ana pasti villalba &                  50.0 &           - &           - &       11.30 &                      5.0 &  a212883@dac.unicamp.br \\
+\textbf{212900} &                     ana paula martins &                  50.0 &        0.00 &        0.00 &       14.78 &                     10.0 &  a212900@dac.unicamp.br \\
+\textbf{231302} &              andré apolinário cardoso &                  70.0 &        0.00 &        0.00 &       94.78 &                      5.0 &  a231302@dac.unicamp.br \\
+\textbf{231732} &             artur preciozo figliolino &                   0.0 &        0.00 &        0.00 &        0.00 &                        - &  a231732@dac.unicamp.br \\
+\textbf{213360} &                    augusto lima alves &                  70.0 &       54.03 &        0.00 &        0.00 &                     10.0 &  a213360@dac.unicamp.br \\
+\textbf{231898} &         beatriz consolmagno de marchi &                  70.0 &        1.61 &        0.00 &       13.04 &                      5.0 &  b231898@dac.unicamp.br \\
+\textbf{213731} &                     bianca senne roma &                  70.0 &       29.03 &       62.64 &       31.30 &                     10.0 &  b213731@dac.unicamp.br \\
+\textbf{232395} &                   bruno bueno de lima &                  30.0 &        0.00 &        0.00 &       12.17 &                      7.0 &  b232395@dac.unicamp.br \\
+\textbf{232796} &          carlos henrique araujo viana &                  70.0 &        4.84 &       14.29 &       18.26 &                      5.0 &  c232796@dac.unicamp.br \\
+\textbf{233335} &                 danielle araujo sousa &                  50.0 &        1.61 &        0.00 &       12.17 &                      5.0 &  d233335@dac.unicamp.br \\
+\textbf{233747} &          eduardo ranieri guedes pinto &                  70.0 &       49.19 &       19.78 &       95.65 &                     10.0 &  e233747@dac.unicamp.br \\
+\textbf{255207} &                  fernanda lima santos &                  50.0 &           - &           - &           - &                      0.0 &  f255207@dac.unicamp.br \\
+\textbf{216459} &            gabriel santana rosmaninho &                   0.0 &        0.00 &        0.00 &        0.00 &                        - &  g216459@dac.unicamp.br \\
+\textbf{235951} &                guilherme garcia gobbo &                  30.0 &        2.42 &        0.00 &        0.00 &                        - &  g235951@dac.unicamp.br \\
+\textbf{236276} &               gustavo henrique biondi &                   0.0 &        0.00 &        1.10 &        0.00 &                        - &  g236276@dac.unicamp.br \\
+\textbf{218090} &            isabela de oliveira garcia &                  70.0 &        1.61 &        0.00 &       93.04 &                     10.0 &  i218090@dac.unicamp.br \\
+\textbf{255241} &             isabella rodrigues soares &                  50.0 &        0.81 &        0.00 &       87.83 &                      7.0 &  i255241@dac.unicamp.br \\
+\textbf{237618} &           joão pedro de paula e silva &                  70.0 &        2.42 &        0.00 &        2.61 &                     10.0 &  j237618@dac.unicamp.br \\
+\textbf{199735} &                    joao pedro gabriel &                  50.0 &       11.29 &        0.00 &       89.57 &                      0.0 &  j199735@dac.unicamp.br \\
+\textbf{218975} &                joão vitor santos melo &                  70.0 &       22.58 &        8.79 &       96.52 &                      5.0 &  j218975@dac.unicamp.br \\
+\textbf{238414} &     juliana florentina fernandes leão &                  70.0 &       16.94 &       40.66 &       19.13 &                      0.0 &  j238414@dac.unicamp.br \\
+\textbf{219613} &  keivan de castro almeida g. de souza &                  50.0 &        6.45 &        0.00 &       15.65 &                      5.0 &  k219613@dac.unicamp.br \\
+\textbf{219907} &           laura maria alves de mattos &                 100.0 &        2.42 &        0.00 &       40.87 &                      7.0 &  l219907@dac.unicamp.br \\
+\textbf{239052} &        lavínia dias de oliveira roman &                  70.0 &       11.29 &        0.00 &       81.74 &                      7.0 &  l239052@dac.unicamp.br \\
+\textbf{220194} &             leonardo tredici de souza &                  70.0 &        0.81 &        1.10 &       54.78 &                      5.0 &  l220194@dac.unicamp.br \\
+\textbf{201326} &               leonardo vitor da silva &                  50.0 &       75.81 &        0.00 &        6.09 &                     10.0 &  l201326@dac.unicamp.br \\
+\textbf{156242} &                 leticia da silva cruz &                   0.0 &           - &           - &       56.52 &                      5.0 &  l156242@dac.unicamp.br \\
+\textbf{240317} &                       luis felipe avi &                  30.0 &           - &       30.77 &        7.83 &                      5.0 &  l240317@dac.unicamp.br \\
+\textbf{240409} &                luísa mendes amstalden &                  70.0 &        5.65 &        0.00 &        8.70 &                      7.0 &  l240409@dac.unicamp.br \\
+\textbf{221515} &        marcos baldez lagoeiro barroso &                  50.0 &        0.81 &        1.10 &       42.61 &                      5.0 &  m221515@dac.unicamp.br \\
+\textbf{255293} &         maria júlia faustino da silva &                  30.0 &           - &           - &        0.00 &                      0.0 &  m255293@dac.unicamp.br \\
+\textbf{241430} &              marina de marco santucci &                  50.0 &        0.00 &       74.73 &       27.83 &                      5.0 &  m241430@dac.unicamp.br \\
+\textbf{222315} &                 matheus oliveira lima &                  50.0 &        0.81 &        0.00 &        7.83 &                     10.0 &  m222315@dac.unicamp.br \\
+\textbf{184528} &       maycon jefferson teodoro bosing &                  50.0 &        0.00 &       71.43 &        0.00 &                      0.0 &  m184528@dac.unicamp.br \\
+\textbf{222615} &     moises aparecido dos santos filho &                  70.0 &        0.00 &        0.00 &       89.57 &                      3.0 &  m222615@dac.unicamp.br \\
+\textbf{186966} &     samuel henrique rezende bernardes &                   0.0 &           - &           - &           - &                      0.0 &  s186966@dac.unicamp.br \\
+\textbf{244321} &         sofia helena de oliveira nery &                  50.0 &        3.23 &        0.00 &       92.17 &                      5.0 &  s244321@dac.unicamp.br \\
+\textbf{244379} &                stefanno felipe bicudo &                  50.0 &        1.61 &        0.00 &       79.13 &                      5.0 &  s244379@dac.unicamp.br \\
+\textbf{187323} &              tatiana marchiori keller &                 100.0 &        0.00 &        0.00 &        7.83 &                      7.0 &  t187323@dac.unicamp.br \\
+\textbf{206194} &       thiago alexandre ramos dos reis &                  50.0 &       46.77 &        1.10 &       93.91 &                      5.0 &  t206194@dac.unicamp.br \\
+\textbf{245212} &          victoria silva torres santos &                 100.0 &           - &           - &           - &                     10.0 &  v245212@dac.unicamp.br \\
+\textbf{206883} &       vinicius santos bering da silva &                   0.0 &       16.94 &        0.00 &       99.13 &                      3.0 &  v206883@dac.unicamp.br \\
+\textbf{245459} &                     vinicius venancio &                  70.0 &        4.84 &        1.10 &       13.91 &                      5.0 &  v245459@dac.unicamp.br \\
 \end{longtable}
 \end{landscape}\end{center}
 #+end_export
-
-
-
-
-
