--- a/Materias/2S2020/PED_CE342/Turma_A/Turma_A.tex
+++ b/Materias/2S2020/PED_CE342/Turma_A/Turma_A.tex
@@ -1,4 +1,4 @@
-% Created 2020-11-09 seg 14:53
+% Created 2020-11-13 sex 18:18
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -38,7 +38,7 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \maketitle
 
 \section{Monetaristas}
-\label{sec:orgac94d5f}
+\label{sec:org0a83caa}
 
 \begin{center}
 \begin{longtable}{lr}
@@ -100,78 +100,211 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \textbf{245459} &                  70.0 \\
 \end{longtable}
 \end{center}
+
+\subsection{Notas}
+\label{sec:orgdb474ab}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/monetaristas.png}
 \end{center}
+
+\subsection{Notas e presença}
+\label{sec:orgc352a85}
 
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/monetaristas_presenca.png}
 \end{center}
 
+\section{Novos Clássicos}
+\label{sec:org97765ae}
 
-\section{Lista de presença e notas}
-\label{sec:orgd9023fd}
-\begin{center}\begin{landscape}
-\small
-\setlength\LTleft{0pt}
-\setlength\LTright{0pt}
-\begin{longtable}{llrrrl}
-\caption{Lista de presença e de notas}\label{lista}\\
+\begin{itemize}
+\item[{$\square$}] Checar resenha Juliana Florentina
+\item[{$\square$}] Identificar respostas das questões (forms)
+\item[{$\square$}] Computar notas
+\item[{$\square$}] Preencher presenhas na tabela da Ana Rosa
+\end{itemize}
+\begin{center}
+\begin{longtable}{lr}
+\caption{Notas das resenhas - Novos Clássicos}\\
 \toprule
-{} &                                  Nome &  Resenha Monetaristas &  2020-10-19 &  2020-10-26 &                   Email \\
-\textbf{RA    } &                                       &                       &             &             &                         \\
+{} &  Resenha Novos Clássicos \\
+\textbf{RA    } &                          \\
 \midrule
 \endhead
 \midrule
-\multicolumn{6}{r}{{Continued on next page}} \\
+\multicolumn{2}{r}{{Continued on next page}} \\
 \midrule
 \endfoot
 
 \bottomrule
 \endlastfoot
-\textbf{212883} &                    ana pasti villalba &                  50.0 &           - &           - &  a212883@dac.unicamp.br \\
-\textbf{212900} &                     ana paula martins &                  50.0 &        0.00 &        0.00 &  a212900@dac.unicamp.br \\
-\textbf{231302} &              andré apolinário cardoso &                  70.0 &        0.00 &        0.00 &  a231302@dac.unicamp.br \\
-\textbf{231732} &             artur preciozo figliolino &                   0.0 &        0.00 &        0.00 &  a231732@dac.unicamp.br \\
-\textbf{213360} &                    augusto lima alves &                  70.0 &       54.03 &        0.00 &  a213360@dac.unicamp.br \\
-\textbf{231898} &         beatriz consolmagno de marchi &                  70.0 &        1.61 &        0.00 &  b231898@dac.unicamp.br \\
-\textbf{213731} &                     bianca senne roma &                  70.0 &       29.03 &       62.64 &  b213731@dac.unicamp.br \\
-\textbf{232395} &                   bruno bueno de lima &                  30.0 &        0.00 &        0.00 &  b232395@dac.unicamp.br \\
-\textbf{232796} &          carlos henrique araujo viana &                  70.0 &        4.84 &       14.29 &  c232796@dac.unicamp.br \\
-\textbf{233335} &                 danielle araujo sousa &                  50.0 &        1.61 &        0.00 &  d233335@dac.unicamp.br \\
-\textbf{233747} &          eduardo ranieri guedes pinto &                  70.0 &       49.19 &       19.78 &  e233747@dac.unicamp.br \\
-\textbf{255207} &                  fernanda lima santos &                  50.0 &           - &           - &  f255207@dac.unicamp.br \\
-\textbf{216459} &            gabriel santana rosmaninho &                   0.0 &        0.00 &        0.00 &  g216459@dac.unicamp.br \\
-\textbf{235951} &                guilherme garcia gobbo &                  30.0 &        2.42 &        0.00 &  g235951@dac.unicamp.br \\
-\textbf{236276} &               gustavo henrique biondi &                   0.0 &        0.00 &        1.10 &  g236276@dac.unicamp.br \\
-\textbf{218090} &            isabela de oliveira garcia &                  70.0 &        1.61 &        0.00 &  i218090@dac.unicamp.br \\
-\textbf{255241} &             isabella rodrigues soares &                  50.0 &        0.81 &        0.00 &  i255241@dac.unicamp.br \\
-\textbf{237618} &           joão pedro de paula e silva &                  70.0 &        2.42 &        0.00 &  j237618@dac.unicamp.br \\
-\textbf{199735} &                    joao pedro gabriel &                  50.0 &       11.29 &        0.00 &  j199735@dac.unicamp.br \\
-\textbf{218975} &                joão vitor santos melo &                  70.0 &       22.58 &        8.79 &  j218975@dac.unicamp.br \\
-\textbf{238414} &     juliana florentina fernandes leão &                  70.0 &       16.94 &       40.66 &  j238414@dac.unicamp.br \\
-\textbf{219613} &  keivan de castro almeida g. de souza &                  50.0 &        6.45 &        0.00 &  k219613@dac.unicamp.br \\
-\textbf{219907} &           laura maria alves de mattos &                 100.0 &        2.42 &        0.00 &  l219907@dac.unicamp.br \\
-\textbf{239052} &        lavínia dias de oliveira roman &                  70.0 &       11.29 &        0.00 &  l239052@dac.unicamp.br \\
-\textbf{220194} &             leonardo tredici de souza &                  70.0 &        0.81 &        1.10 &  l220194@dac.unicamp.br \\
-\textbf{201326} &               leonardo vitor da silva &                  50.0 &       75.81 &        0.00 &  l201326@dac.unicamp.br \\
-\textbf{156242} &                 leticia da silva cruz &                   0.0 &           - &           - &  l156242@dac.unicamp.br \\
-\textbf{240317} &                       luis felipe avi &                  30.0 &           - &       30.77 &  l240317@dac.unicamp.br \\
-\textbf{240409} &                luísa mendes amstalden &                  70.0 &        5.65 &        0.00 &  l240409@dac.unicamp.br \\
-\textbf{221515} &        marcos baldez lagoeiro barroso &                  50.0 &        0.81 &        1.10 &  m221515@dac.unicamp.br \\
-\textbf{255293} &         maria júlia faustino da silva &                  30.0 &           - &           - &  m255293@dac.unicamp.br \\
-\textbf{241430} &              marina de marco santucci &                  50.0 &        0.00 &       74.73 &  m241430@dac.unicamp.br \\
-\textbf{222315} &                 matheus oliveira lima &                  50.0 &        0.81 &        0.00 &  m222315@dac.unicamp.br \\
-\textbf{184528} &       maycon jefferson teodoro bosing &                  50.0 &        0.00 &       71.43 &  m184528@dac.unicamp.br \\
-\textbf{222615} &     moises aparecido dos santos filho &                  70.0 &        0.00 &        0.00 &  m222615@dac.unicamp.br \\
-\textbf{186966} &     samuel henrique rezende bernardes &                   0.0 &           - &           - &  s186966@dac.unicamp.br \\
-\textbf{244321} &         sofia helena de oliveira nery &                  50.0 &        3.23 &        0.00 &  s244321@dac.unicamp.br \\
-\textbf{244379} &                stefanno felipe bicudo &                  50.0 &        1.61 &        0.00 &  s244379@dac.unicamp.br \\
-\textbf{187323} &              tatiana marchiori keller &                 100.0 &        0.00 &        0.00 &  t187323@dac.unicamp.br \\
-\textbf{206194} &       thiago alexandre ramos dos reis &                  50.0 &       46.77 &        1.10 &  t206194@dac.unicamp.br \\
-\textbf{245212} &          victoria silva torres santos &                 100.0 &           - &           - &  v245212@dac.unicamp.br \\
-\textbf{206883} &       vinicius santos bering da silva &                   0.0 &       16.94 &        0.00 &  v206883@dac.unicamp.br \\
-\textbf{245459} &                     vinicius venancio &                  70.0 &        4.84 &        1.10 &  v245459@dac.unicamp.br \\
+\textbf{212883} &                      5.0 \\
+\textbf{212900} &                     10.0 \\
+\textbf{231302} &                      5.0 \\
+\textbf{231732} &                        - \\
+\textbf{213360} &                     10.0 \\
+\textbf{231898} &                      5.0 \\
+\textbf{213731} &                     10.0 \\
+\textbf{232395} &                      7.0 \\
+\textbf{232796} &                      5.0 \\
+\textbf{233335} &                      5.0 \\
+\textbf{233747} &                     10.0 \\
+\textbf{255207} &                      0.0 \\
+\textbf{216459} &                        - \\
+\textbf{235951} &                        - \\
+\textbf{236276} &                        - \\
+\textbf{218090} &                     10.0 \\
+\textbf{255241} &                      7.0 \\
+\textbf{237618} &                     10.0 \\
+\textbf{199735} &                      0.0 \\
+\textbf{218975} &                      5.0 \\
+\textbf{238414} &                      0.0 \\
+\textbf{219613} &                      5.0 \\
+\textbf{219907} &                      7.0 \\
+\textbf{239052} &                      7.0 \\
+\textbf{220194} &                      5.0 \\
+\textbf{201326} &                     10.0 \\
+\textbf{156242} &                      5.0 \\
+\textbf{240317} &                      5.0 \\
+\textbf{240409} &                      7.0 \\
+\textbf{221515} &                      5.0 \\
+\textbf{255293} &                      0.0 \\
+\textbf{241430} &                      5.0 \\
+\textbf{222315} &                     10.0 \\
+\textbf{184528} &                      0.0 \\
+\textbf{222615} &                      3.0 \\
+\textbf{186966} &                      0.0 \\
+\textbf{244321} &                      5.0 \\
+\textbf{244379} &                      5.0 \\
+\textbf{187323} &                      7.0 \\
+\textbf{206194} &                      5.0 \\
+\textbf{245212} &                     10.0 \\
+\textbf{206883} &                      3.0 \\
+\textbf{245459} &                      5.0 \\
+\end{longtable}
+\end{center}
+\subsection{Notas}
+\label{sec:orgabbf031}
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/novosclassicos.png}
+\end{center}
+\subsection{Notas e Presença}
+\label{sec:orgc36c268}
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/novosclassicos_presenca.png}
+\end{center}
+\subsection{Verificação de plágio por amostragem}
+\label{sec:orgd7ab561}
+\subsubsection{Sorteio}
+\label{sec:org0d01e91}
+
+\begin{minted}[frame=lines,fontsize=\scriptsize,linenos]{python}
+pre_selecionados = ["238414"]
+alunos = df.shape[0]
+sample = 0.3
+amostra = round(alunos*sample)
+bad_df = df.index.isin(pre_selecionados)
+elegivies = df.loc[~bad_df].query('`Resenha Novos Clássicos` > 0')["Resenha Novos Clássicos"].index.tolist()
+
+resultado = np.sort(np.random.choice(
+    a = elegivies,
+    size = amostra,
+    replace = False # Sem repetição
+))
+resultado = pd.DataFrame(resultado)
+resultado.columns = ["RA Sorteados"]
+resultado.index = [i + 1 for i in resultado.index]
+print(resultado)
+resultado
+\end{minted}
+
+\begin{verbatim}
+RA Sorteados
+1        156242
+2        187323
+3        212900
+4        219613
+5        219907
+6        222615
+7        231302
+8        232796
+9        239052
+10       240409
+11       244321
+12       244379
+13       245459
+\end{verbatim}
+
+
+
+
+
+\subsubsection{Resultado Turnitin}
+\label{sec:orgb063ebe}
+
+\section{Lista de presença e notas}
+\label{sec:org353af94}
+\begin{center}\begin{landscape}
+\small
+\setlength\LTleft{0pt}
+\setlength\LTright{0pt}
+\begin{longtable}{llrrrrrl}
+\caption{Lista de presença e de notas}\label{lista}\\
+\toprule
+{} &                                  Nome &  Resenha Monetaristas &  2020-10-19 &  2020-10-26 &  2020-11-09 &  Resenha Novos Clássicos &                   Email \\
+\textbf{RA    } &                                       &                       &             &             &             &                          &                         \\
+\midrule
+\endhead
+\midrule
+\multicolumn{8}{r}{{Continued on next page}} \\
+\midrule
+\endfoot
+
+\bottomrule
+\endlastfoot
+\textbf{212883} &                    ana pasti villalba &                  50.0 &           - &           - &       11.30 &                      5.0 &  a212883@dac.unicamp.br \\
+\textbf{212900} &                     ana paula martins &                  50.0 &        0.00 &        0.00 &       14.78 &                     10.0 &  a212900@dac.unicamp.br \\
+\textbf{231302} &              andré apolinário cardoso &                  70.0 &        0.00 &        0.00 &       94.78 &                      5.0 &  a231302@dac.unicamp.br \\
+\textbf{231732} &             artur preciozo figliolino &                   0.0 &        0.00 &        0.00 &        0.00 &                        - &  a231732@dac.unicamp.br \\
+\textbf{213360} &                    augusto lima alves &                  70.0 &       54.03 &        0.00 &        0.00 &                     10.0 &  a213360@dac.unicamp.br \\
+\textbf{231898} &         beatriz consolmagno de marchi &                  70.0 &        1.61 &        0.00 &       13.04 &                      5.0 &  b231898@dac.unicamp.br \\
+\textbf{213731} &                     bianca senne roma &                  70.0 &       29.03 &       62.64 &       31.30 &                     10.0 &  b213731@dac.unicamp.br \\
+\textbf{232395} &                   bruno bueno de lima &                  30.0 &        0.00 &        0.00 &       12.17 &                      7.0 &  b232395@dac.unicamp.br \\
+\textbf{232796} &          carlos henrique araujo viana &                  70.0 &        4.84 &       14.29 &       18.26 &                      5.0 &  c232796@dac.unicamp.br \\
+\textbf{233335} &                 danielle araujo sousa &                  50.0 &        1.61 &        0.00 &       12.17 &                      5.0 &  d233335@dac.unicamp.br \\
+\textbf{233747} &          eduardo ranieri guedes pinto &                  70.0 &       49.19 &       19.78 &       95.65 &                     10.0 &  e233747@dac.unicamp.br \\
+\textbf{255207} &                  fernanda lima santos &                  50.0 &           - &           - &           - &                      0.0 &  f255207@dac.unicamp.br \\
+\textbf{216459} &            gabriel santana rosmaninho &                   0.0 &        0.00 &        0.00 &        0.00 &                        - &  g216459@dac.unicamp.br \\
+\textbf{235951} &                guilherme garcia gobbo &                  30.0 &        2.42 &        0.00 &        0.00 &                        - &  g235951@dac.unicamp.br \\
+\textbf{236276} &               gustavo henrique biondi &                   0.0 &        0.00 &        1.10 &        0.00 &                        - &  g236276@dac.unicamp.br \\
+\textbf{218090} &            isabela de oliveira garcia &                  70.0 &        1.61 &        0.00 &       93.04 &                     10.0 &  i218090@dac.unicamp.br \\
+\textbf{255241} &             isabella rodrigues soares &                  50.0 &        0.81 &        0.00 &       87.83 &                      7.0 &  i255241@dac.unicamp.br \\
+\textbf{237618} &           joão pedro de paula e silva &                  70.0 &        2.42 &        0.00 &        2.61 &                     10.0 &  j237618@dac.unicamp.br \\
+\textbf{199735} &                    joao pedro gabriel &                  50.0 &       11.29 &        0.00 &       89.57 &                      0.0 &  j199735@dac.unicamp.br \\
+\textbf{218975} &                joão vitor santos melo &                  70.0 &       22.58 &        8.79 &       96.52 &                      5.0 &  j218975@dac.unicamp.br \\
+\textbf{238414} &     juliana florentina fernandes leão &                  70.0 &       16.94 &       40.66 &       19.13 &                      0.0 &  j238414@dac.unicamp.br \\
+\textbf{219613} &  keivan de castro almeida g. de souza &                  50.0 &        6.45 &        0.00 &       15.65 &                      5.0 &  k219613@dac.unicamp.br \\
+\textbf{219907} &           laura maria alves de mattos &                 100.0 &        2.42 &        0.00 &       40.87 &                      7.0 &  l219907@dac.unicamp.br \\
+\textbf{239052} &        lavínia dias de oliveira roman &                  70.0 &       11.29 &        0.00 &       81.74 &                      7.0 &  l239052@dac.unicamp.br \\
+\textbf{220194} &             leonardo tredici de souza &                  70.0 &        0.81 &        1.10 &       54.78 &                      5.0 &  l220194@dac.unicamp.br \\
+\textbf{201326} &               leonardo vitor da silva &                  50.0 &       75.81 &        0.00 &        6.09 &                     10.0 &  l201326@dac.unicamp.br \\
+\textbf{156242} &                 leticia da silva cruz &                   0.0 &           - &           - &       56.52 &                      5.0 &  l156242@dac.unicamp.br \\
+\textbf{240317} &                       luis felipe avi &                  30.0 &           - &       30.77 &        7.83 &                      5.0 &  l240317@dac.unicamp.br \\
+\textbf{240409} &                luísa mendes amstalden &                  70.0 &        5.65 &        0.00 &        8.70 &                      7.0 &  l240409@dac.unicamp.br \\
+\textbf{221515} &        marcos baldez lagoeiro barroso &                  50.0 &        0.81 &        1.10 &       42.61 &                      5.0 &  m221515@dac.unicamp.br \\
+\textbf{255293} &         maria júlia faustino da silva &                  30.0 &           - &           - &        0.00 &                      0.0 &  m255293@dac.unicamp.br \\
+\textbf{241430} &              marina de marco santucci &                  50.0 &        0.00 &       74.73 &       27.83 &                      5.0 &  m241430@dac.unicamp.br \\
+\textbf{222315} &                 matheus oliveira lima &                  50.0 &        0.81 &        0.00 &        7.83 &                     10.0 &  m222315@dac.unicamp.br \\
+\textbf{184528} &       maycon jefferson teodoro bosing &                  50.0 &        0.00 &       71.43 &        0.00 &                      0.0 &  m184528@dac.unicamp.br \\
+\textbf{222615} &     moises aparecido dos santos filho &                  70.0 &        0.00 &        0.00 &       89.57 &                      3.0 &  m222615@dac.unicamp.br \\
+\textbf{186966} &     samuel henrique rezende bernardes &                   0.0 &           - &           - &           - &                      0.0 &  s186966@dac.unicamp.br \\
+\textbf{244321} &         sofia helena de oliveira nery &                  50.0 &        3.23 &        0.00 &       92.17 &                      5.0 &  s244321@dac.unicamp.br \\
+\textbf{244379} &                stefanno felipe bicudo &                  50.0 &        1.61 &        0.00 &       79.13 &                      5.0 &  s244379@dac.unicamp.br \\
+\textbf{187323} &              tatiana marchiori keller &                 100.0 &        0.00 &        0.00 &        7.83 &                      7.0 &  t187323@dac.unicamp.br \\
+\textbf{206194} &       thiago alexandre ramos dos reis &                  50.0 &       46.77 &        1.10 &       93.91 &                      5.0 &  t206194@dac.unicamp.br \\
+\textbf{245212} &          victoria silva torres santos &                 100.0 &           - &           - &           - &                     10.0 &  v245212@dac.unicamp.br \\
+\textbf{206883} &       vinicius santos bering da silva &                   0.0 &       16.94 &        0.00 &       99.13 &                      3.0 &  v206883@dac.unicamp.br \\
+\textbf{245459} &                     vinicius venancio &                  70.0 &        4.84 &        1.10 &       13.91 &                      5.0 &  v245459@dac.unicamp.br \\
 \end{longtable}
 \end{landscape}\end{center}
 \end{document}
