--- a/Materias/2S2020/PED_CE342/Turma_C/257932.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/257932.org
@@ -36,3 +36,18 @@
 
 Em seu parágrafo de abertura, pontua corretamente a principal proposição de política econômica do monetarismo bem com as hipóteses associadas a ela. No entanto, faltou a menção à TQM. Em seguida, descreve corretamente a taxa natural de desemprego e contrapõe ao keynesianismo ortodoxo. Descreve corretamente as diferentes versões da curva de Phillips, mas não é indicado o porquê de taxa de desemprego estar abaixo da natural estar associada às expectativas de inflação não correspondidas. No parágrafo seguinte discute esse ponto. Uma questão que não foi abordada é o porquê de mudanças no estoque de moeda implicam inflação. Para tanto, seria necessário lançar mão da TQM. Corretamente descreve a ilusão monetária  e hipótese aceleracionista. Adiante descreve corretamente a TQM e suas implicações. Poderia apenas ter antecipado essa discussão dada a importância para explicar as causas da inflação. Em seguida, poderia ser mais enfática ao pontuar qual a proposição do regime de regras monetárias: estoque de moeda (exógeno) deve crescer a mesma taxa que o PIB. Uma vez que tal discussão já foi pontuada na introdução, é apenas um preciosismo. 
 
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:   Resenha 2
+  :OBJETIVO: Atingido parcialmente
+  :ARGUMENTO: Atingido satisfatoriamente
+  :CONCEITOS: Atingido parcialmente
+  :DESENVOLVIMENTO: Atingido satisfatoriamente
+  :CONCLUSAO: Atingido satisfatoriamente
+  :CLAREZA:  Atingido satisfatoriamente
+  :NOTA:     Atingido satisfatoriamente
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
